fixed the text cutoff issue (#7046)
* fixed the text wrap

* suggested changes:px to builtin

* width change from fit to xs

--- a/apps/site/components/Common/Select/index.module.css
+++ b/apps/site/components/Common/Select/index.module.css
@@ -96,7 +96,9 @@
   }
 
   .text > span > span {
-    @apply truncate;
+    @apply max-w-64
+      truncate
+      text-wrap;
   }
 
   .label {
